WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
251152
color() function parsing incorrectly parses missing components
https://bugs.webkit.org/show_bug.cgi?id=251152
Summary
color() function parsing incorrectly parses missing components
Emilio Cobos Álvarez (:emilio)
Reported
2023-01-25 08:15:00 PST
color(srgb / 0.5) seems to parse on safari with the components zeroed out, but that seems wrong per spec.
https://w3c.github.io/csswg-drafts/css-color-4/#funcdef-color
only says the alpha is optional.
Attachments
Add attachment
proposed patch, testcase, etc.
Emilio Cobos Álvarez (:emilio)
Comment 1
2023-01-25 17:19:22 PST
https://bugs.chromium.org/p/chromium/issues/detail?id=1410200
is the relevant chromium bug, for reference. I found this while reviewing patches to implement this in Firefox.
Karl Dubost
Comment 2
2023-01-25 18:19:49 PST
After: document.body.style.color = color(srgb / 0.5) document.body.style.color WebKit 'color(srgb 0 0 0 / 0.5)' Gecko '' Blink 'color(srgb 0 0 0 / 0.5)'
Radar WebKit Bug Importer
Comment 3
2023-01-25 20:43:59 PST
<
rdar://problem/104679823
>
Chris Lilley
Comment 4
2023-01-26 07:58:31 PST
This used to be correct per spec, long ago when color() also did custom color spaces and it was reasonable to omit some components and have them auto-filled with zero. Now custom color spaces are in CSS Color 5, and clearly distinguished with a dashed-ident; while predefined color spaces are in CSS Color 4 and are wither an RGB space or an XYZ space. Both take 3 components, as the grammar makes clear. There was some leftover prose about variable number of components, not up to date with the grammar change, which I just corrected.
Tim Nguyen (:ntim)
Comment 5
2023-03-24 11:51:31 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/11940
EWS
Comment 6
2023-03-24 14:34:49 PDT
Committed
262098@main
(77b199a5f044): <
https://commits.webkit.org/262098@main
> Reviewed commits have been landed. Closing PR #11940 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug